--- a/Testing/src/main/resources/application.properties
+++ b/Testing/src/main/resources/application.properties
@@ -1,4 +1,15 @@
-info.school.name=vsnh,
-info.app.name=SupercoolApp
-info.app.desc=fun app
-info.app.version=1.0.0
+#info.school.name=vsnh,
+#info.app.name=SupercoolApp
+#info.app.desc=fun app
+#info.app.version=1.0.0
+
+#server.port=8080
+#spring.datasource.url=jdbc:mysql://localhost:3307/myhiber
+#spring.datasource.username=root
+#spring.datasource.password=saswata123
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.ddl-auto=update
+
+
+
