--- a/Testing/pom.xml
+++ b/Testing/pom.xml
@@ -21,17 +21,17 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
-		<!-- Scope basically depricates where is dependency is used for. -->
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-api</artifactId>
-			<version>5.9.2</version>
-			<scope>test</scope>
-		</dependency>
+		<!-- Scope basically depricates where is dependency is used for . -->
+
 
 
 		<dependency>
@@ -39,6 +39,8 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+
 
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -79,6 +81,20 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
@@ -91,7 +107,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.1.0</version>
- 
+
 				<configuration>
 
 					<!-- SureFire Plygin would nt generate the Repoprt if Test cases fail.So 
@@ -131,7 +147,7 @@
 				<!-- Tell what is goal during executio fo this Plugin -->
 				<executions>
 					<execution>
-						<phase>test</phase>
+						<phase>Test</phase>
 						<goals>
 							<!-- This states during test phase execute the plugin goal:::: maven 
 								surefire report plugin:report -->
@@ -155,6 +171,7 @@
 				<executions>
 					<execution>
 						<id>jacoco-prepare</id>
+						<phase>test</phase>
 						<goals>
 							<goal>prepare-agent</goal>
 						</goals>
